# lip-sync

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: dataset.py  preprocessing.py  tokenizer.py
model/: architecture.py  training.py
